--- a/.github/workflows/link-checker.yml
+++ b/.github/workflows/link-checker.yml
@@ -93,20 +93,22 @@ jobs:
           echo "" >> $GITHUB_STEP_SUMMARY
           echo "**Подробные результаты** сохранены в [артефакте link-check-results](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }})" >> $GITHUB_STEP_SUMMARY
           
+          # Если есть нерабочие ссылки, показываем первые 5
           if [ "${{ steps.checker.outputs.broken_links }}" -gt 0 ]; then
             echo "" >> $GITHUB_STEP_SUMMARY
             echo "**Примеры нерабочих ссылок:**" >> $GITHUB_STEP_SUMMARY
             echo '```' >> $GITHUB_STEP_SUMMARY
             
-            python << 'EOF'
+            # Самый простой вариант - одна Python команда
+            python -c "
 import json
 with open('results.json') as f:
     data = json.load(f)
 broken = [r for r in data if not r['ok']]
 for i, r in enumerate(broken[:5]):
-    print(f'{i+1}. {r["url"]}')
-    print(f'   Статус: {r["status"] or "N/A"}, Ошибка: {r["reason"]}')
-EOF
+    print(f'{i+1}. {r[\"url\"]}')
+    print(f'   Статус: {r[\"status\"] or \"N/A\"}, Ошибка: {r[\"reason\"]}')
+" >> $GITHUB_STEP_SUMMARY
             
             echo '```' >> $GITHUB_STEP_SUMMARY
           fi
